Safari365 Prod/src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>General</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>In Dialogue %28have spoken to OR received email reply from client%29</fullName>
        </values>
        <values>
            <fullName>Not Contacted Yet</fullName>
        </values>
        <values>
            <fullName>Open %28Have not received a reply from client yet%29</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified %28Ready for Quote%29</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Absolute_luxury__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Absolute luxury</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Activate_Workflow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activate Workflow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active_and_adventure_tours__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active and adventure tours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Activities__c</fullName>
        <label>Activities</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Family Friendly</fullName>
                </value>
                <value>
                    <fullName>Romance</fullName>
                </value>
                <value>
                    <fullName>The Great Migration</fullName>
                </value>
                <value>
                    <fullName>Climbing Kilimanjaro</fullName>
                </value>
                <value>
                    <fullName>Wildlife Safaris</fullName>
                </value>
                <value>
                    <fullName>Gorilla Trekking</fullName>
                </value>
                <value>
                    <fullName>Beach Holiday</fullName>
                </value>
                <value>
                    <fullName>Adventure</fullName>
                </value>
                <value>
                    <fullName>Food and wine</fullName>
                </value>
                <value>
                    <fullName>History and culture</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Adventure__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Adventure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Adventure_activities__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Adventure activities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agent</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ages_of_Children__c</fullName>
        <label>Ages of Children</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Arrival_Date__c</fullName>
        <label>Arrival Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Basket_Information__c</fullName>
        <inlineHelpText>These are items the Client chose/wanted when checking out of the Safari365 website</inlineHelpText>
        <label>Basket Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Beach_and_bush_safaris__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Beach and bush safaris</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Beach_relaxation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Beach relaxation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Botswana__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Botswana</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Browser_Trial__c</fullName>
        <label>Browser Trial</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Budget_Total__c</fullName>
        <label>Budget Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_or_Star_Rating__c</fullName>
        <description>Do you have a budget we should work within ( please specify currency excluding international airfare) or should we send you options for a 3,4 or 5 star level?</description>
        <label>Budget or Star Rating</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Budget_safaris__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget safaris</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cancel_Workflow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancel Workflow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Canoe_Safari__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Canoe Safari</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cape_Town_SA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cape Town (SA)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Comments__c</fullName>
        <inlineHelpText>Additional comments the Client has told Safari365. Note these and make it personal (respond to these accurately)</inlineHelpText>
        <label>Client Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Climbing_Kilimanjaro__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Climbing Kilimanjaro</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <inlineHelpText>I f International Flight are required fill in details such as: Where from, Dates, Duration, and Class, etc</inlineHelpText>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Competition_Name__c</fullName>
        <label>Competition Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competition_Shared_on_FB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Competition Shared on FB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consultant_Image__c</fullName>
        <formula>IMAGE( OwnerImageId__c , &quot;Consultant&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consultant Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consultant_Profile_Link_Brazil__c</fullName>
        <formula>HYPERLINK( Consultant_Profile__c , &quot; Clique aqui para perfil completo &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consultant Profile Link Brazil</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consultant_Profile_Link__c</fullName>
        <formula>HYPERLINK( Consultant_Profile__c , &quot; Click here for a full profile &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consultant Profile Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consultant_Profile__c</fullName>
        <defaultValue>$User.ProfileUrl__c</defaultValue>
        <label>Consultant Profile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consultant_Working_Since__c</fullName>
        <formula>Owner:User.Working_Since__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consultant Working Since</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consultanthasreplied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consultant has replied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Method__c</fullName>
        <label>Contact Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ConvertMe__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ConvertMe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Culture_and_history__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Culture and history</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_has_Replied__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When a customer respond to an email please tick this box.</description>
        <inlineHelpText>When a customer respond to an email please tick this box.</inlineHelpText>
        <label>Customer has Replied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DaddyAnalytics__DA_Campaign_Content__c</fullName>
        <label>DA Campaign Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaddyAnalytics__DA_Campaign_Medium__c</fullName>
        <label>DA Campaign Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaddyAnalytics__DA_Campaign_Name__c</fullName>
        <label>DA Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaddyAnalytics__DA_Campaign_Source__c</fullName>
        <label>DA Campaign Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaddyAnalytics__DA_Campaign_Term__c</fullName>
        <label>DA Campaign Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaddyAnalytics__DA_Referrer_Search__c</fullName>
        <label>DA Searched For</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaddyAnalytics__DA_Referrer_Website__c</fullName>
        <label>DA Came From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaddyAnalytics__DA_Session_ID__c</fullName>
        <label>DA Session ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaddyAnalytics__DA_Token__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>DA Token</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DaddyAnalytics__DA_User_ID__c</fullName>
        <label>DA User ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaddyAnalytics__DA_Visit_Time__c</fullName>
        <label>DA Visit Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DaddyAnalytics__DA_Visitor_Geolocation__c</fullName>
        <label>DA Visitor Geolocation</label>
        <scale>4</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>DaddyAnalytics__DA_Visitor_Landing_Page__c</fullName>
        <label>DA Landed On</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaddyAnalytics__DA_Visitor_Organisation__c</fullName>
        <label>DA ISP Listed As</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaddyAnalytics__DA_Web_to_Lead_URL__c</fullName>
        <label>DA Form Submitted</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Lead Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( FirstName)=0,&quot;First Name, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN(LastName)=0, &quot;Last Name, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Company)=0, &quot;Company, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Phone)=0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Salutation,&quot;&quot;), &quot;Salutation, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Rating,&quot;&quot;), &quot;Rating, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(City)=0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Email)=0, &quot;Email&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF(LEN( FirstName ) = 0, 0,15) + IF(LEN( LastName ) = 0, 0,15) + IF(LEN( Company ) = 0, 0,15) + IF(LEN( Phone ) = 0, 0,15) + IF( ISPICKVAL( Salutation,&quot;&quot;), 0,10) + IF( ISPICKVAL(Rating,&quot;&quot;), 0,10) + IF( LEN( City ) = 0, 0,10) + IF( LEN( Email ) = 0, 0,10)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Status_Changed__c</fullName>
        <description>Date Status Changed</description>
        <inlineHelpText>Date Status Changed</inlineHelpText>
        <label>Date Status Changed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Destinations__c</fullName>
        <label>Destinations</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cape Town (South Africa)</fullName>
                </value>
                <value>
                    <fullName>Cape Winelands (South Africa)</fullName>
                </value>
                <value>
                    <fullName>Garden Route (South Africa)</fullName>
                </value>
                <value>
                    <fullName>Kwa-Zulu Natal (South Africa)</fullName>
                </value>
                <value>
                    <fullName>Kruger National Park (South Africa)</fullName>
                </value>
                <value>
                    <fullName>Madikwe</fullName>
                </value>
                <value>
                    <fullName>Sun City (South Africa)</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Mozambique</fullName>
                </value>
                <value>
                    <fullName>Namibia</fullName>
                </value>
                <value>
                    <fullName>Victoria Falls</fullName>
                </value>
                <value>
                    <fullName>Zambia</fullName>
                </value>
                <value>
                    <fullName>Masai Mara</fullName>
                </value>
                <value>
                    <fullName>Serengeti National Park</fullName>
                </value>
                <value>
                    <fullName>Ngorongoro Crater</fullName>
                </value>
                <value>
                    <fullName>Kenya Beaches</fullName>
                </value>
                <value>
                    <fullName>Mt Kilimanjaro</fullName>
                </value>
                <value>
                    <fullName>Zanzibar and Pemba</fullName>
                </value>
                <value>
                    <fullName>Rwanda</fullName>
                </value>
                <value>
                    <fullName>Uganda</fullName>
                </value>
                <value>
                    <fullName>Other Tanzania National Parks</fullName>
                </value>
                <value>
                    <fullName>Other Kenya National Reserve</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_Not_Send_Auto_Intro_Email_on_Assign__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Click this if assighning a lead to a Consultant and you do not want to company &quot;Meet your Consultant&quot; email from MD to send.</inlineHelpText>
        <label>Do Not Send Auto Intro Email on Assign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Send_Photobook_Offer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Send Photobook Offer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_not_remind_me__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do not remind me</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Notified__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Sales Cycle Email Notify a New Consultant has been Assigned</inlineHelpText>
        <label>Email Notified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enquiry_Ref_No__c</fullName>
        <displayFormat>SD-{000000}</displayFormat>
        <label>Enquiry Ref No</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Enquiry_item__c</fullName>
        <label>Enquiry item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family_Friendly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Family Friendly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Family_safaris__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Family safaris</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fishing_adventures__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fishing adventures</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fly_In_safaris__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fly-In safaris</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Food_and_Wine__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Food and Wine</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Footer_Image__c</fullName>
        <formula>IMAGE(&quot;/servlet/servlet.FileDownload?file=015D0000004DOd8&quot;,&quot;Footer&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Footer Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Calculator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Form Calculator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GCLID__c</fullName>
        <label>Google click ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Garden_Route_SA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Garden Route (SA)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Golf_combination_holidays__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Golf combination holidays</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gorilla_Trekking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gorilla Trekking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasWonOpportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HasWonOpportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hiking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hiking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>History_and_culture__c</fullName>
        <defaultValue>false</defaultValue>
        <label>History and culture</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Honeymoons_and_Romance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Honeymoons and Romance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hot_air_ballooning__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hot-air ballooning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IP_Address__c</fullName>
        <label>IP Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Comments__c</fullName>
        <inlineHelpText>The &quot;Internal Comments&apos; are never shown to the Client (and will be carried through to the Opportunity) Record all NB info here to reference into the future (ie Phone calls/dates made, overview of conversations, your opinion, client likes/dislikes etc)</inlineHelpText>
        <label>Internal Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Internal_Company__c</fullName>
        <label>Internal Company</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Safari 365</fullName>
                </value>
                <value>
                    <fullName>South Africa 365</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>International_Flight_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>International Flight Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Intro_Video__c</fullName>
        <formula>IMAGE(&quot;https://www.safari365.com/cms365/uploads/content-images/icons/youtube-image-1.jpg&quot; , &quot;Visit Our Youtube Channel&quot; ,239,400)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Intro Video Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kenya__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Kenya</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kenyan_beaches__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Kenyan beaches</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kruger_National_Park_SA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Kruger National Park (SA)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kwa_Zulu_Natal_SA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Kwa-Zulu Natal (SA)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Landing_Page_del__c</fullName>
        <label>Landing Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Activity_Flag__c</fullName>
        <formula>IMAGE(
IF(
 OR(LastActivityDate &lt; Today() - 4, LastActivityDate &lt;&gt; NULL) , 
&quot;/img/samples/flag_red.gif&quot;, 
&quot;/img/samples/flag_green.gif&quot;) , 
&quot;/s.gif&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Activity Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadAge__c</fullName>
        <formula>if(
 IsConverted , (ConvertedDate -  Datevalue(CreatedDate) )*1,  (NOW()-  CreatedDate )*1
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is recorded in days from the date the Lead was Created ( Note: the quicker we respond to the initial lead the better chance we have of beating our competition (within 6 hours (0.25 of a day) is best!!)</inlineHelpText>
        <label>Lead Age (days)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Cost__c</fullName>
        <formula>CASE( TEXT( LeadSource ),
&quot;Client Referral&quot;, 50,
&quot;Employee Referral&quot;, 10,
&quot;Other&quot;, 100,
&quot;Phone&quot;, 100,
&quot;Social Marketing (FB, Newsletters, etc)&quot;, 50,

250
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lead_Month__c</fullName>
        <formula>TEXT(MONTH( DATEVALUE( CreatedDate ) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Nurture__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Exists as Lead Nurture</label>
        <referenceTo>Lead_Nurture__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Year__c</fullName>
        <formula>TEXT(YEAR(DATEVALUE( CreatedDate )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leads_Process__c</fullName>
        <inlineHelpText>Always ensure the &quot;Lead Progress&apos; is kept up to date as the lead moves along the sales cycle. You can change the Lead Progress using the quicksteps above. Note -  you can view all of your leads and where they are in the process using the &quot;Kanban&quot; display</inlineHelpText>
        <label>Lead Progress (in Sales Cycle)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Leads_Process</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Level_of_Accommodation__c</fullName>
        <label>Level of Accommodation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Luxury: 5-star, exclusive, top-end service and facilities</fullName>
                </value>
                <value>
                    <fullName>Standard: 4-star, good quality, good location, mid-range</fullName>
                </value>
                <value>
                    <fullName>Value: 3-star, budget orientated, clean and comfortable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Luxury__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>5-star, exclusive accommodation, top-end service and facilities.</inlineHelpText>
        <label>Luxury</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Luxury_and_Pamperting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Luxury and Pamperting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Luxury_rail_travel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Luxury rail travel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Madikwe_SA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Madikwe (SA)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Malaria_free_safaris__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Malaria free safaris</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Masai_Mara_National_Reserve__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Masai Mara National Reserve</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Members_Club_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Members Club ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mid_range_accommodation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mid-range accommodation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mozambique__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mozambique</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mt_Kilimanjaro__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mt Kilimanjaro</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Namibia__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Namibia</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NewImportedLeads__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NewImportedLeads</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Country_of_Residence__c</fullName>
        <inlineHelpText>NB to record this accurately (do not guess as we will market according to this in the future)</inlineHelpText>
        <label>Country of Residence (Master)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country_of_Residence</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Newsletter__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Did the Client agree to receive the Safari365 Newsletter or not?</inlineHelpText>
        <label>Newsletter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Newsletter_for_opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Newsletter for opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ngorongoro_Crater__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ngorongoro Crater</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Adults__c</fullName>
        <label>Number of Adults</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Children__c</fullName>
        <label>Number of Children</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opp_Email__c</fullName>
        <formula>Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_First_Name__c</fullName>
        <formula>FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Last_Name__c</fullName>
        <formula>LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Mobile__c</fullName>
        <formula>MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Ammount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity_Ammount</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Kenyan_National_Reserves__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other Kenyan National Reserves</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Tanzania_National_Parks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other Tanzania National Parks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OwnerImageId__c</fullName>
        <label>OwnerImageId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Client_Email__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Referral Client Email</description>
        <inlineHelpText>Referral Client Email</inlineHelpText>
        <label>Referral Client Email</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Email</field>
                <operation>contains</operation>
                <value>@</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads (Referral Client Email)</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>